# mojentic

./: .bandit  .coveragerc  .gitignore  .hone-gates.json  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  LICENSE  LICENSE.md  PROMPT.md  README.md  SECURITY.md  checking.py  commit-hook.sh  dev-requirements.txt  event_broker.py  mkdocs.yml  openai_model_audit_report.json  pre-commit  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.txt  test_event_broker.py
.claude/: settings.json  settings.local.json
.githooks/: pre-push
.github/: copilot-instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml  publish_documentation.yml  python.yml  python.yml.old
.junie/: guidelines.md
audit/: maintain-2026-02-20-021935-actions.md  maintain-2026-02-20-022502-actions.md  maintain-2026-04-16-040539-actions.md  maintain-2026-04-17-034609-actions.md  maintain-2026-05-10-055918-actions.md  maintain-2026-05-11-044433-actions.md  maintain-2026-05-12-044959-actions.md  maintain-2026-05-13-043744-actions.md  maintain-2026-05-14-035543-actions.md  maintain-2026-05-15-064159-actions.md  maintain-2026-05-16-085800-actions.md  maintain-2026-05-17-043643-actions.md  maintain-2026-06-09-034307-actions.md  maintain-2026-06-14-042213-actions.md  maintain-2026-06-15-043209-actions.md  maintain-2026-06-16-053219-actions.md  maintain-2026-06-17-053003-actions.md  maintain-2026-06-18-043413-actions.md  maintain-2026-06-26-025547-actions.md
code-playground/: simple_llm.py  simple_llm_repl.py  simple_structured.py  simple_tool.py  solver_chat_session.py  streaming.py  tell_user_example.py  tracer_demo.py  working_memory.py
docs/: api.md  api_0.md  api_1.md  api_2.md  async_capabilities.md  audit.md  broker.md  building_tools.md  chat_sessions.md  chat_sessions_with_tools.md  embeddings.md  file_tools.md  get_started.md  image_analysis.md  index.md  ipa.md  message_builder.md  message_builders.md  message_composers.md  observable.md  ooda.md  openai_gateway_enhanced_infrastructure.md  parallel_tools.md  personas.md  realtime.md  reasoning_effort.md  simple_text_generation.md  sra.md  starter_1.md  streaming.md  structured_output.md  task_management.md  testing.md  tool_usage.md  tracer.md  web_search.md
integration_checks/: README.md  anthropic_gateway_spec.py  conftest.py  models.py  ollama_gateway_spec.py  openai_gateway_spec.py
mojentic/: __init__.py  base_agent.py  llm_gateway.py
src/_examples/: README.md  TRACER_QT_VIEWER.md  async_dispatcher_example.py  async_llm_example.py  audit_demo.py  audit_openai_capabilities.py  broker_as_tool.py  broker_examples.py  broker_image_examples.py  broker_text.py  characterize_ollama.py  characterize_openai.py  chat_session.py  chat_session_with_tool.py  coding_file_tool.py  current_datetime_tool_example.py  design_analysis.py  embeddings.py  ensures_files_exist.py  ephemeral_task_manager_example.py  fetch_openai_models.py  file_deduplication.py  file_tool.py  image_analysis.py  image_broker.py  image_broker_splat.py  iterative_solver.py  list_models.py  model_characterization.py  ooda.py  openai_gateway_enhanced_demo.py  oversized_embeddings.py  parallel_tool_calls.py  raw.py  react.py  recursive_agent.py  routed_send_response.py  send_response.py  simple_llm.py  simple_llm_repl.py  (+8 more)
src/_examples/react/: __init__.py  formatters.py
src/_examples/realtime/: interruption.py  parallel_tools.py  push_to_talk.py  simple_voice_wav.py  text_mode.py  with_tools.py
src/mojentic/: __init__.py  async_dispatcher.py  async_dispatcher_spec.py  base_agent.py  base_llm_agent.py  channel.py  correlation_aggregator_agent.py  dispatcher.py  event.py  event_broker.py  llm_gateway.py  logger.py  output_agent.py  router.py  shared_working_memory.py  test_base_llm_agent.py  test_event_broker.py  test_router.py
src/mojentic/agents/: __init__.py  agent_broker.py  agent_event_adapter.py  async_aggregator_agent.py  async_aggregator_agent_spec.py  async_llm_agent.py  async_llm_agent_spec.py  base_agent.py  base_async_agent.py  base_llm_agent.py  base_llm_agent_spec.py  correlation_aggregator_agent.py  iterative_problem_solver.py  ooda_agent.py  output_agent.py  simple_recursive_agent.py  simple_recursive_agent_spec.py
src/mojentic/audit/: audit_events.py  audit_events_spec.py  audit_system.py  audit_system_spec.py  event_store.py  event_store_spec.py
src/mojentic/context/: __init__.py  shared_working_memory.py  shared_working_memory_spec.py
src/mojentic/llm/: __init__.py  adapters.py  chat_session.py  chat_session_spec.py  completion_config.py  (+10 more)
(+96 files in other folders)
