[project]
name = "mojentic"
version = "1.2.3"
authors = [
    { name = "Stacey Vetzal", email = "stacey@vetzal.com" },
]
description = "Mojentic is an agentic framework that aims to provide a simple and flexible way to assemble teams of agents to solve complex problems."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

dependencies = [
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "anthropic>=0.93.0",
    "tiktoken>=0.12.0",
    "parsedatetime>=2.6",
    "pytz>=2026.1.post1",
    "serpapi>=1.0.2",
    "colorama>=0.4.6",
    "filelock>=3.25.2",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-spec>=6.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "flake8>=7.3.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "griffe-fieldz>=0.5.0",
    "pymdown-extensions>=10.21",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/svetzal/mojentic"
Issues = "https://github.com/svetzal/mojentic/issues"
